--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>userfront</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>userfront</name>
-    <description>User Frontend for Banking App</description>
+    <description>Banking App</description>
 
     <properties>
         <java.version>1.8</java.version>
